testsuite/poke.pkl/funcall-diag-1.pk
/* { dg-do compile } */

fun uno = int: { return 1; }
fun sum = (int a, int b) int: { return a + b; }

fun bleh = void:
  {
   var a = sum (uno, sum); /* { dg-error "\n" } */
  }
